--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Soldaduras - Modelos 3D en RA</title>
-
-  <!-- Model Viewer -->
+  <title>Soldaduras 3D / AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
   <style>
     body {
       margin: 0;
@@ -17,30 +14,28 @@
       height: 100vh;
       background-color: #222;
     }
-
     model-viewer {
       width: 100%;
-      max-width: 600px;
-      height: 80vh;
-      background-color: #333;
-      border-radius: 10px;
+      max-width: 900px;
+      height: 100%;
+      max-height: 600px;
     }
   </style>
 </head>
 <body>
 
-  <model-viewer 
-    id="soldadurasViewer"
+<model-viewer
     src="Soldaduras.glb"
     ios-src="Soldaduras.usdz"
-    alt="Tres espirales Soldaduras"
+    alt="Modelo de Soldaduras"
     ar
     ar-modes="webxr scene-viewer quick-look"
-    environment-image="neutral"
-    auto-rotate
     camera-controls
+    auto-rotate
+    background-color="#222"
     shadow-intensity="1">
-  </model-viewer>
+</model-viewer>
 
 </body>
 </html>
+
