--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Soldaduras - RA</title>
+  <title>Soldaduras 3D / AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
@@ -12,52 +12,29 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: #f0f0f0;
-    }
-    #preview {
-      width: 90%;
-      max-width: 600px;
-      cursor: pointer;
+      background-color: #222;
     }
     model-viewer {
-      width: 90%;
-      max-width: 600px;
-      height: 80vh;
+      width: 100%;
+      max-width: 900px;
+      height: 100%;
+      max-height: 600px;
     }
   </style>
 </head>
 <body>
 
-<img id="preview" src="preview.png" alt="Soldaduras 3D">
-
-<model-viewer 
-    id="ar-viewer"
+<model-viewer
     src="Soldaduras.glb"
     ios-src="Soldaduras.usdz"
-    alt="Soldaduras 3D"
+    alt="Modelo de Soldaduras"
     ar
     ar-modes="webxr scene-viewer quick-look"
     camera-controls
     auto-rotate
-    style="display:none;">
+    background-color="#222"
+    shadow-intensity="1">
 </model-viewer>
-
-<script>
-  const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
-  const preview = document.getElementById('preview');
-  const viewer = document.getElementById('ar-viewer');
-
-  if (isIOS) {
-    // iOS: al tocar la imagen, abrir Quick Look
-    preview.addEventListener('click', () => {
-      window.location.href = 'Soldaduras.usdz';
-    });
-  } else {
-    // Android u otros: ocultar la imagen y mostrar model-viewer con botón AR
-    preview.style.display = 'none';
-    viewer.style.display = 'block';
-  }
-</script>
 
 </body>
 </html>
